writeup.txt
⚠️  Compiling of exercises/14_generics/generics2.rs failed! Please try again. Here's the output:
error[E0308]: mismatched types
  --> exercises/14_generics/generics2.rs:32:33
   |
32 |         assert_eq!(Wrapper::new("Foo").value, "Foo");
   |                    ------------ ^^^^^ expected `u32`, found `&str`
   |                    |
   |                    arguments to this function are incorrect
   |
note: associated function defined here
  --> exercises/14_generics/generics2.rs:16:12
   |
16 |     pub fn new(value: u32) -> Self {
   |            ^^^ ----------

error[E0308]: mismatched types
  --> exercises/14_generics/generics2.rs:32:47
   |
32 |         assert_eq!(Wrapper::new("Foo").value, "Foo");
   |                                               ^^^^^ expected `u32`, found `&str`

error: aborting due to 2 previous errors

